Päivitä Instagram-feed ja .env

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-# Instagram API URL (Behold.so tai vastaava)
-# Esim: https://api.behold.so/v1/your-gallery-id/items
-PUBLIC_INSTAGRAM_API_URL=your_instagram_api_url_here
+# Instagram / Behold JSON-feed (julkinen URL, ei tokenia repoihin)
+# Esim: https://api.behold.so/v1/feeds/<your-feed-id>
+PUBLIC_INSTAGRAM_FEED_URL=https://your-behold-feed-url-here
 
 # Cloudflare Tunnel Token
 # Cloudflare Zero Trust > Networks > Tunnels > (your tunnel) > Configure > Token
